--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   firebase_auth: ^0.18.0+1
   firebase_dynamic_links: ^0.5.1
   intl: ^0.16.1
+  cloud_firestore: ^0.14.0+2
+
 
   
 
