--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   firebase_dynamic_links: ^0.5.1
   intl: ^0.16.1
   cloud_firestore: ^0.14.0+2
+  fluttertoast: ^7.1.1
+  image_picker: ^0.6.7+7
 
 
   
