--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   fluttertoast: ^7.1.1
   image_picker: ^0.6.7+7
+  form_bloc: ^0.5.2
+  flutter_form_bloc: ^0.4.3
+
 
 
   
