--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   image_picker: ^0.6.7+7
   form_bloc: ^0.5.2
   flutter_form_bloc: ^0.4.3
-
+  percent_indicator: "^2.1.7+2"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
