--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
   image_picker: ^0.6.7+7
   form_bloc: ^0.5.2
   flutter_form_bloc: ^0.4.3
+  convex_bottom_bar: ^2.4.2
+  animations: ^1.1.2
+  kf_drawer: ^1.1.2
+  spring_button: ^1.0.13
+  liquid_progress_indicator: ^0.3.2
+  slimy_card:
+    git:
+      url: https://github.com/LatifahAlomar/SlimyCard-Animated-Flutter-Package
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
