--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   spring_button: ^1.0.13
   liquid_progress_indicator: ^0.3.2
   percent_indicator: "^2.1.7+2"
+  dots_indicator: ^1.2.0
   slimy_card:
     git:
       url: https://github.com/LatifahAlomar/SlimyCard-Animated-Flutter-Package
