--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   googleapis: ^0.56.1
   googleapis_auth: ^0.2.12
   url_launcher: ^5.7.5
+  adobe_xd: ^1.0.0+1
 
   dots_indicator: ^1.2.0
   slimy_card:
