--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   liquid_progress_indicator: ^0.3.2
   percent_indicator: "^2.1.7+2"
   google_sign_in: ^4.5.5
-
+  googleapis: ^0.56.1
+  googleapis_auth: ^0.2.12
+  url_launcher: ^5.6.0
+  circular_menu: ^1.1.0
   dots_indicator: ^1.2.0
   slimy_card:
     git:
