--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
+  firebase_storage: ^4.0.1
   firebase_dynamic_links: ^0.5.1
   intl: ^0.16.1
   cloud_firestore: ^0.14.0+2
