--- a/cocode/pubspec.yaml
+++ b/cocode/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^5.7.5
   google_sign_in: ^4.5.5
   adobe_xd: ^1.0.0+1
+  toggle_switch: ^0.1.8
 
   dots_indicator: ^1.2.0
   slimy_card:
