changes on notification payload

--- a/cocode/android/app/src/main/AndroidManifest.xml
+++ b/cocode/android/app/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
       </intent-filter>
 
 
+      <intent-filter>
+         <action android:name="com.google.firebase.MESSAGING_EVENT" />
+     </intent-filter>
+
+
 
         </activity>
         <!-- Don't delete the meta-data below.
